# TinyGarbleCircuitSynthesis

./: .gitignore  README.md
Benchmarks/: README.md  compile_all.sh
Benchmarks/argmax/: argmax.dcsh
Benchmarks/compare/: compare.dcsh
Benchmarks/cordic/: cordic.dcsh
Benchmarks/div/: div.dcsh  float.dcsh
Benchmarks/encoder/: encoder.dcsh
Benchmarks/float/: float.dcsh
Benchmarks/hamming/: hamming.dcsh
Benchmarks/knns/: knns.dcsh
Benchmarks/knns_td/: first_nns_comb_td.dcsh  first_nns_seq_td.dcsh  k_nns_seq_td.dcsh  knns_td.dcsh
Benchmarks/matrix_mult/: matrix_mult.dcsh
Benchmarks/mips/: mips.dcsh
Benchmarks/mult/: mult.dcsh
Benchmarks/non_secret_test/: non_secret_test.dcsh
Benchmarks/public_test/: public_test.dcsh
Benchmarks/rsa/: rsa.dcsh
Benchmarks/select/: select.dcsh
Benchmarks/sha3/: sha3.dcsh
Benchmarks/stable_match/: stable_match.dcsh
Benchmarks/stack_machine/: stackMachine.dcsh
Benchmarks/sum/: sum.dcsh  sum.v
Benchmarks2/: compile_all.sh  compile_yos_all.sh
Benchmarks2/BenchmarksSim/: aes_11cc.do  aes_1cc.do  comp_nbit_1cc.do  mac_nnbit_1cc.do  modelsim.ini  mult_mnbit_ncc.do  mxm_nnbit_mk1dim_mkcc.do  relu_nbit_1cc.do  setupsim.do  sum_nbit_1cc.do  vdp_nnbit_kdim_kcc.do
Benchmarks2/Headers/: Common_H.vh
Benchmarks2/Simulation/: aes_ht.do  comp_nbit_ncc.do  div_nm_2_n.do  fc_layer.do  hamming_nbit_1cc.do  hamming_nbit_ncc.do  mac_nnbit_1cc.do  maxpool_nbit_kdim_kcc.do  mult_mnbit_1cc.do  sum_nbit_ncc.do
Benchmarks2/aes/: aes.dcsh  aes_11cc.v  aes_1cc.tcl  aes_1cc.v  aes_1cc.yos  compile.sh  tb_aes_11cc.sv  tb_aes_11cc.v  tb_aes_1cc.sv  tb_aes_1cc.v
Benchmarks2/aes_ht/: KeyExpansion_ht.sv  MixColumns.sv  aes_1cc.yos  aes_ht.dcsh  aes_ht.tcl  aes_ht_0.sv  aes_ht_1.sv  aes_ht_10.sv  compile.sh  compile_yos.sh  tb_aes_ht.sv
Benchmarks2/compare/: comp.dcsh  comp.tcl  comp_nbit_1cc.sv  comp_nbit_ncc.sv  compile.sh  tb_comp_nbit_1cc.sv  tb_comp_nbit_ncc.sv
Benchmarks2/div/: tb_div_nm_2_n.sv
Benchmarks2/fc_layer/: compile.sh  mac_comb.sv  mxv_nnbit_jkdim.sv  mxv_nnbit_jkdim_relu.sv  mxv_nnbit_jkdim_relu.tcl  tb_mxv_nnbit_jkdim.sv  tb_mxv_nnbit_jkdim_relu.sv
Benchmarks2/hamming/: compile.sh  hamming.dcsh  (+6 more)
ProgInt/: compile_yos_all.sh
SynthesisLibrary/: README.md
Verilog2BMR/: CMakeLists.txt  README.md
Verilog2EMP/: CMakeLists.txt  README.md  V2EMP_ALL.sh.in  circuit.cpp  circuit.h  common.h  configure  emp_circuit.cpp  parse_netlist.cpp  parse_netlist.h  scheduling.cpp  scheduling.h  v_2_EMPCircuit.cpp  v_2_EMPCircuit.h  v_2_EMPCircuit_main.cpp
Verilog2SCD/: CMakeLists.txt  README.md  parse_netlist.cpp  parse_netlist.h  scd.cpp  scd.h  scheduling.h  v_2_scd.cpp  v_2_scd_main.cpp  v_2_scd_test.cpp
(+106 files in other folders)
